Remove the error dialog entirely.

Several reasons:
1) the text in it is factually incorrect
2) dialogs that pop up are annoying
3) kmail/akonaditray should be responsible for showing an error popup anyway

BUG: 262423